Avoid layout-shift on material icons load

--- a/index.css
+++ b/index.css
@@ -17,13 +17,24 @@ Danger - Cornell red - #b91c1c - red-700 */
 .material-symbols-outlined {
     user-select: none;
     font-size: inherit;
-
     font-variation-settings: 'FILL' 1,
     'wght' 400,
     'GRAD' 200;
     width: 1em;
     aspect-ratio: 1;
     overflow: hidden;
+    font-family: 'Material Symbols Outlined', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
 }
 
 
